<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.search.SearchScreenFragment">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/spotify_gray_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/search_type_bests_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/best_results"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/search_type_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/artists"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/search_type_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/albums"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/search_type_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/tracks"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/artist_sort_type_selectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/artist_sort_relevance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/relevance"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/artist_sort_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/popularity"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/artist_sort_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/followers"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/album_sort_type_selectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/album_sort_relevance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/relevance"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/album_sort_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/popularity"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/album_sort_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/release_date"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/track_sort_type_selectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/track_sort_relevance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/relevance"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/track_sort_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/popularity"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/track_sort_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_type_selector"
            android:text="@string/length"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/message_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_baseline_music_note_24"
                app:tint="@color/spotify_gray_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/search_something"
                android:textColor="@color/spotify_gray_light"
                android:textSize="16sp"
                android:textStyle="italic" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <include
                layout="@layout/network_error_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bests_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/best_results_artist"
                    layout="@layout/layout_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/best_results_albums_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/layout_album" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/best_results_tracks_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/layout_track" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artists_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_artist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albums_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/layout_album" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_track" />

        <ProgressBar
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

    </FrameLayout>
</LinearLayout>